Added support for lib/ dir and added support for managment of plugins (can create one other functions have not been tested yet)